--- a/app/src/style.css
+++ b/app/src/style.css
@@ -13,6 +13,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+  font-family: "Minecraft";
+  src: url("/Minecraft.ttf");
+}
+
 
 body {
   margin: 0;
